--- a/Team 7 KUKA arm/Team 7 KUKA arm.csproj
+++ b/Team 7 KUKA arm/Team 7 KUKA arm.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="color_picker.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
