--- a/Team 7 KUKA arm/Team 7 KUKA arm.csproj
+++ b/Team 7 KUKA arm/Team 7 KUKA arm.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorting.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
